fix(client): allow wrapping items in namespace-list
Fixes https://github.com/weaveworks/scope/issues/3408

--- a/client/app/styles/_base.scss
+++ b/client/app/styles/_base.scss
@@ -1241,7 +1241,6 @@ a {
     border-radius: $border-radius-soft;
     border: 1px solid $background-darker-color;
     display: inline-block;
-    white-space: nowrap;
   }
 
   &-action {
